add test for springboot